added allotedStocks field
