# lib/module/v1/user/userRoute.js
@@ -230,6 +230,7 @@ router.route("/login")
             password,
             mPIN,
             mobileNo,
+            allotedStocks
         } = req.body;
         let UserType = req.body.userType
         console.log(membershipId,
@@ -247,7 +248,8 @@ router.route("/login")
           mPIN,
           mobileNo,
           userType,
-          UserType
+          UserType,
+          allotedStocks
         }).then(function (result) {
             resHndlr.sendSuccess(res, result, req);
         }).catch(function (err) {
@@ -265,7 +267,8 @@ router.route("/editUser")
             name,
             email,
             mobileNo,
-            status
+            status,
+            allotedStocks
         } = req.query;
 
         let UserType = req.query.userType
@@ -279,7 +282,8 @@ router.route("/editUser")
           mobileNo,
           userType,
           UserType,
-          status
+          status,
+          allotedStocks
         }).then(function (result) {
             resHndlr.sendSuccess(res, result, req);
         }).catch(function (err) {
